# crew_for_story_teller

./: README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
src/story_insights/: appconfig.py  azureai.py  crew.py  main.py
src/story_insights/config/: agents.yaml  tasks.yaml
src/story_insights/tools/: data_analyst.py
