[project]
name = "story_insights"
version = "0.1.0"
description = "story_insights using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
story_insights = "story_insights.main:run"
run_crew = "story_insights.main:run"
train = "story_insights.main:train"
replay = "story_insights.main:replay"
test = "story_insights.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
